tests/snapshots/integration__integration_tests__merge__merge_auto_commit_and_squash.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mSquashing 2 commits & working tree changes into a single commit[0m (2 files, [32m+2[0m)...
💡 Backup created @ [SHA]
🔄 [36mGenerating squash commit message...[0m
[107m [0m  [1mfix: update file 1 content[0m
✅ [32mSquashed @ [2m[SHA][0m
[107m [0m   file1.txt | 1 [32m+[m
[107m [0m   file2.txt | 1 [32m+[m
[107m [0m   2 files changed, 2 insertions(+)
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[SHA][0m (no rebase needed)
[107m [0m  * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m fix: update file 1 content
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 2 files, [32m+2[0m)
🔄 [36mRemoving [1m[36mfeature[0m[36m worktree & branch in background[0m

----- stderr -----
