tests/snapshots/integration__integration_tests__merge__merge_no_commits_with_changes.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🟡 [33mAuto-staging 1 untracked file:[0m
[107m [0m  newfile.txt
🔄 [36mCommitting changes with default message... (1 file, [32m+1[0m, no squashing needed)[0m
💡 [2mUsing fallback commit message. Run 'wt config --help' for LLM setup guide[0m
[107m [0m  [1mChanges to newfile.txt[0m
✅ [32mCommitted changes @ [2m[32m96ddfbc[0m[0m
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[36m96ddfbc[0m[36m (no rebase needed)[0m
[107m [0m  * [33m96ddfbc[m Changes to newfile.txt
[107m [0m   newfile.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1m[32mmain[0m[32m (1 commit, 1 file, [32m+1[0m)[0m
🔄 [36mRemoving [1m[36mno-commits-dirty[0m[36m worktree & branch in background[0m
